[gd_scene load_steps=5 format=3 uid="uid://46cjgouftjll"]

[ext_resource type="Texture2D" uid="uid://bobun5wip4t3q" path="res://icon.svg" id="1_soytb"]
[ext_resource type="Script" path="res://ui/scripts/round_victory.gd" id="2_l1kfq"]
[ext_resource type="Script" path="res://ui/scripts/item_controller.gd" id="3_21txd"]

[sub_resource type="LabelSettings" id="LabelSettings_bba87"]
font_size = 43

[node name="RoundVictory" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_l1kfq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose a reward"
label_settings = SubResource("LabelSettings_bba87")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="button1" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" node_paths=PackedStringArray("name_label", "description_label")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
keep_pressed_outside = true
icon = ExtResource("1_soytb")
expand_icon = true
script = ExtResource("3_21txd")
name_label = NodePath("../name_label")
description_label = NodePath("../description_label")

[node name="name_label" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "item name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="description_label" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "item description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="button2" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2" node_paths=PackedStringArray("name_label", "description_label")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
icon = ExtResource("1_soytb")
expand_icon = true
script = ExtResource("3_21txd")
name_label = NodePath("../name_label")
description_label = NodePath("../description_label")

[node name="name_label" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "item name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="description_label" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "item description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="button3" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3" node_paths=PackedStringArray("name_label", "description_label")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
icon = ExtResource("1_soytb")
expand_icon = true
script = ExtResource("3_21txd")
name_label = NodePath("../name_label")
description_label = NodePath("../description_label")

[node name="name_label" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "item name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="description_label" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "item description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="round_end_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="round_end_timer" to="." method="_on_round_end_timer_timeout"]
